--- a/src/BepInEx/config/AutoTranslatorConfig.ini
+++ b/src/BepInEx/config/AutoTranslatorConfig.ini
@@ -1,5 +1,5 @@
 ﻿[Service]
-Endpoint=SugoiOfflineTranslator
+Endpoint=
 FallbackEndpoint=
 
 [General]
@@ -14,11 +14,11 @@ PreprocessorsFile=Translation\{Lang}\Text\_Preprocessors.txt
 PostprocessorsFile=Translation\{Lang}\Text\_Postprocessors.txt
 
 [TextFrameworks]
-EnableUGUI=true
-EnableNGUI=true
+EnableUGUI=False
+EnableNGUI=False
 EnableTextMeshPro=true
-EnableTextMesh=true
-EnableFairyGUI=true
+EnableTextMesh=False
+EnableFairyGUI=False
 EnableIMGUI=false
 
 [Behaviour]
