--- a/src/gakumas-local/localizationConfig.json
+++ b/src/gakumas-local/localizationConfig.json
@@ -24,7 +24,7 @@
     "enabled": true,
     "forceExportResource": true,
     "gameOrientation": 0,
-    "lazyInit": true,
+    "lazyInit": false,
     "liveCustomeCostumeId": "",
     "liveCustomeHeadId": "",
     "lodQualityLevel": 5,
@@ -33,7 +33,7 @@
     "qualitySettingsLevel": 5,
     "reflectionQualityLevel": 5,
     "renderScale": 1.0,
-    "replaceFont": true,
+    "replaceFont": false,
     "targetFrameRate": 0,
     "textTest": false,
     "unlockAllLive": false,
