--- a/src/gakumas-local/config.json
+++ b/src/gakumas-local/config.json
@@ -1,7 +1,7 @@
 {
     "enableConsole": true,
     "transRemoteZipUrl": "https://github.com/NatsumeLS/Gakumas-Translation-Data-EN.git",
-    "useAPIAssets": false,
+    "useAPIAssets": true,
     "useAPIAssetsURL": "https://api.github.com/repos/NatsumeLS/Gakumas-Translation-Data-EN/releases/latest",
-    "useRemoteAssets": true
+    "useRemoteAssets": false
 }
