--- a/src/BepInEx/config/AutoTranslatorConfig.ini
+++ b/src/BepInEx/config/AutoTranslatorConfig.ini
@@ -29,7 +29,7 @@ ForceSplitTextAfterCharacters=0
 CopyToClipboard=false
 MaxClipboardCopyCharacters=2500
 ClipboardDebounceTime=1.25
-EnableUIResizing=true
+EnableUIResizing=false
 EnableBatching=true
 UseStaticTranslations=false
 ForceUIResizing=false
@@ -44,7 +44,7 @@ GenerateStaticSubstitutionTranslations=false
 GeneratePartialTranslations=false
 EnableTranslationScoping=false
 EnableSilentMode=true
-EnableTextPathLogging=true
+EnableTextPathLogging=false
 OutputUntranslatableText=false
 IgnoreVirtualTextSetterCallingRules=false
 MaxTextParserRecursion=4
